k8s/config/gateway-infra/reference-grant-gitlab.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-reading-gitlab-secret
  namespace: gateway-infra
spec:
  from:
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: demo-app
  to:
    - group: ""
      kind: Secret
      name: gitlab-oidc-secret
