k8s/config/gateway-infra/envoy-filter-403.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: custom-403-rbac
  namespace: gateway-infra
spec:
  workloadSelector:
    labels:
      gateway.networking.k8s.io/gateway-name: shared-gateway
  configPatches:
    - applyTo: NETWORK_FILTER
      match:
        context: GATEWAY
        listener:
          filterChain:
            filter:
              name: "envoy.filters.network.http_connection_manager"
      patch:
        operation: MERGE
        value:
          typed_config:
            "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager"
            local_reply_config:
              mappers:
                - filter:
                    status_code_filter:
                      comparison:
                        op: EQ
                        value:
                          default_value: 403
                          runtime_key: "not_used"
                  status_code: 403
                  body:
                    inline_string: |
                      <!DOCTYPE html>
                      <html>
                        <body style="font-family: sans-serif; text-align: center; padding-top: 50px; background-color: #f4f4f9;">
                          <h1 style="color: #333;">403 - Accès Refusé par Istio</h1>
                          <p style="color: #666; margin-bottom: 30px;">Ton compte Keycloak n'a pas les droits requis (RBAC) pour accéder a cette application.</p>
                          <a href="/oauth2/sign_out?rd=https%3A%2F%2Fauth.192.168.1.100.sslip.io%2Frealms%2Fkube-lab%2Fprotocol%2Fopenid-connect%2Flogout%3Fclient_id%3Denvoy-demo-app%26post_logout_redirect_uri%3Dhttps%253A%252F%252Fdemo.192.168.1.100.sslip.io%252F" style="padding: 10px 20px; background-color: #d9534f; color: white; text-decoration: none; border-radius: 5px; font-weight: bold;">
                            Se deconnecter et changer de compte
                          </a>
                        </body>
                      </html>
                  body_format_override:
                    content_type: "text/html; charset=UTF-8"
                    text_format_source:
                      inline_string: "%LOCAL_REPLY_BODY%"
