k8s/config/gateway-infra/oauth2-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: oauth2-proxy-route
  namespace: gateway-infra
spec:
  parentRefs:
    - name: shared-gateway
  hostnames:
    - "*.192.168.1.100.sslip.io"
    - "demo.192.168.1.100.sslip.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /oauth2
      backendRefs:
        - name: oauth2-proxy
          port: 80
